# dict-bot

./: app.py  bot.py  config.py  fucking_messages.py  handlers.py  models.py  pyproject.toml  states.py
